--- a/Task1/style.css
+++ b/Task1/style.css
@@ -6,8 +6,13 @@ body {
 }
 .container {
   max-width: 1000px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  margin: 0;
-  padding: 0;
-  background: #f2f2f2;
+  margin: 20px auto;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+/* Header */
+.header {
+  text-align: center;
+  border-bottom: 2px solid #000;
 }
