--- a/Task1/style.css
+++ b/Task1/style.css
@@ -15,4 +15,15 @@ body {
 .header {
   text-align: center;
   border-bottom: 2px solid #000;
+  padding-bottom: 10px;
+}
+.header h1 {
+  font-size: 3em;
+  margin: 0;
+  font-weight: bold;
+}
+.header small {
+  display: block;
+  font-size: 0.9em;
+  color: #666;
 }
