--- a/Task1/style.css
+++ b/Task1/style.css
@@ -27,3 +27,59 @@ body {
   font-size: 0.9em;
   color: #666;
 }
+.hastag {
+  text-align: right;
+  font-size: 0.9em;
+  color: #c45d00;
+}
+/* Grid Layout */
+.grid {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px;
+  margin-top: 20px;
+}
+.article {
+  margin-bottom: 20px;
+}
+.article h2 {
+  margin: 0;
+  font-size: 1.4 em;
+  border-bottom: 2px solid #333;
+  padding-bottom: 5px;
+}
+.article p {
+  font-size: 0.95em;
+  line-height: 1.5em;
+  color: #444;
+}
+
+/* highligh Section */
+.highlight {
+  background: #f26419;
+  color: #fff;
+  padding: 20px;
+  margin: 20px 0;
+}
+.highlight h2 {
+  font-size: 1.8em;
+  margin: 0;
+}
+.hightlight p {
+  margin-top: 10px;
+  font-size: 1em;
+}
+
+/* Sidebar  */
+.sidebar .box {
+  background: #eee;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+
+.sidebar .box h3 {
+  margin: 0;
+  font-size: 1.2em;
+  border-bottom: 2px solid #f26419;
+  padding-bottom: 5px;
+}
