--- a/Task1/style.css
+++ b/Task1/style.css
@@ -39,6 +39,7 @@ body {
   gap: 20px;
   margin-top: 20px;
 }
+/* Left Column (articles) */
 .article {
   margin-bottom: 20px;
 }
@@ -71,10 +72,15 @@ body {
 }
 
 /* Sidebar  */
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .sidebar .box {
   background: #eee;
   padding: 15px;
-  margin-bottom: 20px;
+  border-left: 5px solid #f26419;
 }
 
 .sidebar .box h3 {
