--- a/Task1/style.css
+++ b/Task1/style.css
@@ -11,26 +11,46 @@ body {
   background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-/* Header */
+/* Header Section */
 .header {
-  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  align-items: center;
   border-bottom: 2px solid #000;
-  padding-bottom: 10px;
+  padding: 10px 0 15px 0;
+  margin-bottom: 20px;
 }
-.header h1 {
+
+/* Left box  */
+.header-left {
+  font-size: 0.8em;
+  color: #444;
+  background: #eee;
+  padding: 10px;
+  max-width: 150px;
+}
+.header-center {
+  text-align: center;
+}
+
+/* Center  */
+.header-center h1 {
   font-size: 3em;
   margin: 0;
   font-weight: bold;
 }
-.header small {
-  display: block;
+
+.header-center .subtitle {
   font-size: 0.9em;
   color: #666;
+  margin-top: 5px;
 }
-.hastag {
-  text-align: right;
+
+.header-right {
   font-size: 0.9em;
   color: #c45d00;
+  text-align: right;
+  max-width: 180px;
 }
 /* Grid Layout */
 .grid {
@@ -55,7 +75,7 @@ body {
   color: #444;
 }
 
-/* highligh Section */
+/* highlight Section */
 .highlight {
   background: #f26419;
   color: #fff;
