--- a/Task1/style.css
+++ b/Task1/style.css
@@ -5,8 +5,8 @@ body {
   background: #f2f2f2;
 }
 .container {
-  max-width: 1000px;
-  margin: 20px auto;
+  /* max-width: 1000px; */
+  margin: auto;
   padding: 20px;
   background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,7 +35,7 @@ body {
 
 /* Center  */
 .header-center h1 {
-  font-size: 3em;
+  font-size: 10em;
   margin: 0;
   font-weight: bold;
 }
@@ -49,8 +49,8 @@ body {
 .header-right {
   font-size: 0.9em;
   color: #c45d00;
-  text-align: right;
-  max-width: 180px;
+  text-align: center;
+  /* max-width: 180px; */
 }
 /* Grid Layout */
 .grid {
@@ -60,13 +60,23 @@ body {
   margin-top: 20px;
 }
 /* Left Column (articles) */
+.grid-lower {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 10px;
+  margin-top: 20px;
+}
+.Govt-Policy {
+  background: #9b9292c2;
+  padding: 10px 120px 50px 10px;
+}
 .article {
   margin-bottom: 20px;
 }
 .article h2 {
   margin: 0;
   font-size: 1.4 em;
-  border-bottom: 2px solid #333;
+  /* border-bottom: 2px solid #333; */
   padding-bottom: 5px;
 }
 .article p {
@@ -79,11 +89,11 @@ body {
 .highlight {
   background: #f26419;
   color: #fff;
-  padding: 20px;
+  padding: 10px 200px 200px 10px;
   margin: 20px 0;
 }
 .highlight h2 {
-  font-size: 1.8em;
+  font-size: 5em;
   margin: 0;
 }
 .hightlight p {
